Fixes UI for overflow of extremely long titles of articles and article content

--- a/client/src/app/main/dashboard/dashboard-article/dashboard-article-page.scss
+++ b/client/src/app/main/dashboard/dashboard-article/dashboard-article-page.scss
@@ -8,5 +8,6 @@
 
     &_wrapped {
         padding: 0 15px;
+        word-break: break-word;
     }
 }
